[package]
name = "stormwind"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dirs = "5.0.1"
filetime = "0.2.25"
reqwest = { version = "0.12.7", features = ["blocking","json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
