[package]
name = "stormwind"
version = "0.9.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking","json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
strum = { version = "0.26.3", features = ["derive"] }
