[package]
name = "stormwind"
version = "0.20.0"
edition = "2021"
repository = "https://github.com/marcinmdev/stormwind"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
compact_str = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["blocking","json","rustls-tls"], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
strum = { version = "0.26.3", features = ["derive"] }
